# Practice

./: .gitignore  README.md
datastructure/: 数据结构.xmind
datastructure/src/Container/Tree/BinaryTree/: BinaryTree.h  BinaryTreeNode.h  UTest.cpp
designpattern/: 设计模式.xmind
doc/assembly/: 80x86汇编.xmind
doc/designpattern/: 设计模式.xmind
doc/gdb/: 用GDB调试程序.xmind
frameworks/reactor/: reactor.cc  reactor.h  reactor_client_test.cc
languages/python/: base.py  function.py  operator.py
languages/python/module/: test.py
makefile/: makefile
misc_test/c_cpp/: cpp_mem_struct.cpp  new_delete_test.cpp  stacktrace.cpp  test_cpp11.cpp
misc_test/fabric/: fabfile_exec.py  fabfile_get.py  fabfile_task1.py  fabfile_task2.py  fabfile_task4.py
misc_test/lua/: test.lua
misc_test/makefile/: hello_world.cpp  跟我一起写Makefile.xmind
misc_test/mysql/: mf.linux
misc_test/python/: main.py  type.py
misc_test/python/chinese/: t1.py  t2.py
misc_test/python/module/: support.py
misc_test/shell/: break.sh  shift_01.sh  t1.sh
misc_test/test_gtest/: CMakeLists.txt
reactor/: event_demultiplexer.cc  event_demultiplexer.h  test_common.h
snippets/c_cpp/: bit_revert.cpp
snippets/fabric/: fabfile_arg.py  fabfile_color.py  fabfile_fun.py  fabfile_put.py  fabfile_task3.py
snippets/mysql/: test_mysql.c
snippets/shell/: read.sh  shift_02.sh
src/: CMakeLists.txt
src/cmake/: base.cmake  common.cmake  compiler.cmake  platform.cmake
src/datastructure/: CMakeLists.txt
src/datastructure/include/Tree/BinaryTree/: BinaryTree.h  BinaryTreeNode.h  UTest.cpp
src/datastructure/src/Tree/: UTest.cpp
src/frameworks/reactor/: reactor_server_test.cc
src/snippets/c_cpp/: macro_test.cpp
src/snippets/mysql/: mf.mac
src/snippets/test_gtest/: CMakeLists.txt
